# DataFun

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml
backend/core/: auth.py  cache.py  config.py  embeddings.py  mcp_client.py
backend/db/: models.py  postgres.py
backend/routers/: auth.py  health.py  history.py  pipeline.py  profile.py
docs/: db_journey_example.md
frontend/: middleware.ts  next.config.mjs  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/history/: page.tsx
frontend/app/pipeline/[id]/: page.tsx
frontend/app/profile/[id]/: page.tsx
frontend/components/auth/: LoginForm.tsx  SignUpForm.tsx
frontend/components/pipeline/: InferStep.tsx  PreprocessStep.tsx  ProfileStep.tsx  StepBar.tsx  SuggestStep.tsx  TrainStep.tsx
frontend/components/profiling/: CardDetailPanel.tsx  ProfilingCard.tsx  ProfilingCardGrid.tsx  ProfilingRing.tsx
frontend/components/profiling/detail/: ColumnStatsDetail.tsx  ColumnsDetail.tsx  CorrelationDetail.tsx  DatasetOverviewDetail.tsx  (+5 more)
frontend/components/shared/: AppSidebar.tsx  ComplexityDots.tsx  GradeBadge.tsx  PriorityBadge.tsx  SpeedBadge.tsx
frontend/components/suggestions/: ConcernsList.tsx  ModelCard.tsx  ModelRankingList.tsx  PreprocessingChecklist.tsx  StarterCodeBlock.tsx
frontend/contexts/: ThemeContext.tsx
frontend/lib/: api.ts  auth.ts  sse.ts
mcp/: pyproject.toml  server.py
mcp/core/: config.py  format_loader.py  model_suggester.py  plots.py  profiler.py
mcp/tools/: preprocess_dataset.py  profile_dataset.py  reprofile_dataset.py  run_inference.py  suggest_model.py  suggest_models.py  train_models.py
(+1 files in other folders)
