[project]
name = "datafun-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "redis[hiredis]>=5.0",
    "fastmcp>=2.0",
    "litellm>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sse-starlette>=1.6",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
