[project]
name = "datafun-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pyxlsb>=1.0",
    "odfpy>=1.4",
    "pyarrow>=16.0",
    "tables>=3.9",
    "pyreadstat>=1.2",
    "litellm>=1.40",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "joblib>=1.4",
    "statsmodels>=0.14",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
